--- a/source/notebook/kdd.ipynb
+++ b/source/notebook/kdd.ipynb
@@ -7,7 +7,28 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import cupy as cp"
+    "import numpy as cp\n",
+    "import math\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.contrib import learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def input_fn(x, y, batch_size):\n",
+    "    dataset = tf.data.Dataset.from_tensor_slices((dict(x), y))\n",
+    "    dataset = dataset.shuffle(1000).repeat().batch(batch_size)\n",
+    "    return dataset\n",
+    "\n",
+    "\n",
+    "def input_fn_test(x, y, batch_size):\n",
+    "    dataset = tf.data.Dataset.from_tensor_slices((dict(x), y))\n",
+    "    dataset = dataset.batch(batch_size)\n",
+    "    return dataset"
    ]
   },
   {
@@ -36,16 +57,34 @@
     "          \"nmap.\": 10, \"normal.\": 11, \"perl.\": 12, \"phf.\": 13, \"pod.\": 14, \"portsweep.\": 15, \"rootkit.\": 16, \"satan.\": 17, \"smurf.\": 18, \"spy.\": 19, \"teardrop.\": 20,\n",
     "          \"warezclient.\": 21, \"warezmaster.\": 22}\n",
     "\n",
-    "dataset = dataset.replace({\"protocol_type\": protocol_type, \"service\": service, \"flag\": flag, \"attack\": attack})"
+    "#Troca os valores de string para número\n",
+    "dataset = dataset.replace({\"protocol_type\": protocol_type, \"service\": service, \"flag\": flag, \"attack\": attack})\n",
+    "\n",
+    "#Coloca todas em columas de feature em x e a de resultado em y\n",
+    "x, y = dataset, dataset.pop(\"attack\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\python\\python36\\lib\\site-packages\\numpy\\lib\\function_base.py:3183: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  c /= stddev[:, None]\n",
+      "c:\\python\\python36\\lib\\site-packages\\numpy\\lib\\function_base.py:3184: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  c /= stddev[None, :]\n"
+     ]
+    }
+   ],
    "source": [
     "included_features = column_names\n",
+    "included_features.remove(\"attack\")\n",
+    "\n",
+    "CORRCOEF_THRESHOLD = 0.5\n",
     "\n",
     "i = 0\n",
     "j = 1\n",
@@ -56,22 +95,94 @@
     "        col2 = dataset[column_names[j]]\n",
     "        corrcoef = cp.corrcoef(col1, col2)\n",
     "\n",
-    "        if abs(corrcoef[0][1]) > 0.5:\n",
+    "        if abs(corrcoef[0][1]) > CORRCOEF_THRESHOLD:\n",
     "            included_features.remove(included_features[j])\n",
     "        else:\n",
     "            j = j + 1\n",
     "\n",
     "    i = i + 1\n",
-    "    j = i + 1\n"
+    "    j = i + 1\n",
+    "\n",
+    "for feature in included_features: #Por algum motivo o pop dentro do while não funcionava\n",
+    "    x.pop(feature)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Using default config.\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpojm2ccpc\n",
+      "INFO:tensorflow:Using config: {'_model_dir': 'C:\\\\Users\\\\Everton\\\\AppData\\\\Local\\\\Temp\\\\tmpojm2ccpc', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': None, '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_train_distribute': None, '_device_fn': None, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x0000025E10935748>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n",
+      "Treinando\n",
+      "INFO:tensorflow:Calling model_fn.\n",
+      "INFO:tensorflow:Done calling model_fn.\n",
+      "INFO:tensorflow:Create CheckpointSaverHook.\n",
+      "INFO:tensorflow:Graph was finalized.\n",
+      "INFO:tensorflow:Running local_init_op.\n",
+      "INFO:tensorflow:Done running local_init_op.\n",
+      "INFO:tensorflow:Saving checkpoints for 0 into C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpojm2ccpc\\model.ckpt.\n",
+      "INFO:tensorflow:loss = 1011.17926, step = 1\n",
+      "INFO:tensorflow:Saving checkpoints for 100 into C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpojm2ccpc\\model.ckpt.\n",
+      "INFO:tensorflow:Loss for final step: 4.887569e-06.\n",
+      "Testando\n",
+      "INFO:tensorflow:Calling model_fn.\n",
+      "INFO:tensorflow:Done calling model_fn.\n",
+      "INFO:tensorflow:Starting evaluation at 2018-11-06-00:06:17\n",
+      "INFO:tensorflow:Graph was finalized.\n",
+      "INFO:tensorflow:Restoring parameters from C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpojm2ccpc\\model.ckpt-100\n",
+      "INFO:tensorflow:Running local_init_op.\n",
+      "INFO:tensorflow:Done running local_init_op.\n",
+      "INFO:tensorflow:Finished evaluation at 2018-11-06-00:06:18\n",
+      "INFO:tensorflow:Saving dict for global step 100: accuracy = 0.5573054, average_loss = 58.870815, global_step = 100, loss = 7534.5493\n",
+      "INFO:tensorflow:Saving 'checkpoint_path' summary for global step 100: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpojm2ccpc\\model.ckpt-100\n",
+      "Acc: 0.5573053956031799\n"
+     ]
+    }
+   ],
    "source": [
-    "dataset_norm = (dataset - dataset.mean()) / (dataset.max() - dataset.min())"
+    "n_train = math.ceil(len(x.index)*0.9)\n",
+    "n_test = len(x.index) - n_train\n",
+    "\n",
+    "x_train = x[:n_train]\n",
+    "y_train = y[:n_train]\n",
+    "\n",
+    "x_test = x[n_train:n_train+n_test]\n",
+    "y_test = y[n_train:n_train+n_test]\n",
+    "\n",
+    "#x_train = tf.keras.utils.normalize(x_train, axis=1)\n",
+    "\n",
+    "NUM_STEPS = 10000\n",
+    "BATCH_SIZE = 128\n",
+    "\n",
+    "feature_columns = []\n",
+    "for feature in x_train.keys():\n",
+    "    feature_columns.append(tf.feature_column.numeric_column(key=feature))\n",
+    "\n",
+    "hidden_units=[1000]    \n",
+    "    \n",
+    "shallow = tf.estimator.DNNClassifier(\n",
+    "    feature_columns=feature_columns,\n",
+    "    hidden_units=hidden_units, #1 hidden layer com 1000 hidden units\n",
+    "    n_classes=23) #Pode distinguir até 23 valores diferentes\n",
+    "\n",
+    "# Treino\n",
+    "print(\"Treinando\")\n",
+    "shallow.train(\n",
+    "    input_fn=lambda:input_fn(x_train, y_train, BATCH_SIZE),\n",
+    "    steps=NUM_STEPS)\n",
+    "\n",
+    "# Teste\n",
+    "print(\"Testando\")\n",
+    "eval_result = shallow.evaluate(\n",
+    "    input_fn=lambda:input_fn_test(x_test, y_test, BATCH_SIZE))\n",
+    "\n",
+    "print(f'Acc: {eval_result[\"accuracy\"]}')"
    ]
   }
  ],
