--- a/source/notebook/kdd.ipynb
+++ b/source/notebook/kdd.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as cp\n",
+    "import numpy as np\n",
     "import math\n",
     "import tensorflow as tf\n",
     "from tensorflow.contrib import learn"
@@ -24,11 +24,29 @@
     "    dataset = dataset.shuffle(1000).repeat().batch(batch_size)\n",
     "    return dataset\n",
     "\n",
-    "\n",
     "def input_fn_test(x, y, batch_size):\n",
     "    dataset = tf.data.Dataset.from_tensor_slices((dict(x), y))\n",
     "    dataset = dataset.batch(batch_size)\n",
-    "    return dataset"
+    "    return dataset\n",
+    "\n",
+    "def classifier_fn(feature_columns, hidden_units, activation_fn, BATCH_SIZE, NUM_STEPS):\n",
+    "    classifier = tf.estimator.DNNClassifier(\n",
+    "        feature_columns=feature_columns,\n",
+    "        hidden_units=hidden_units, #1 hidden layer com 1000 hidden units\n",
+    "        n_classes=23, #Pode distinguir até 23 valores diferentes\n",
+    "        activation_fn=activation_fn,\n",
+    "        batch_norm=False)\n",
+    "\n",
+    "    # Treino\n",
+    "    classifier.train(\n",
+    "        input_fn=lambda:input_fn(x_train, y_train, BATCH_SIZE),\n",
+    "        steps=NUM_STEPS)\n",
+    "\n",
+    "    # Teste\n",
+    "    eval_result = classifier.evaluate(\n",
+    "        input_fn=lambda:input_fn_test(x_test, y_test, BATCH_SIZE))\n",
+    "\n",
+    "    print(f'\\nNodes: {hidden_units}\\nActivation fn: {activation_fn}\\nAccuracy: {eval_result[\"accuracy\"]}\\n')"
    ]
   },
   {
@@ -93,7 +111,7 @@
     "\n",
     "    while j < len(included_features):\n",
     "        col2 = dataset[column_names[j]]\n",
-    "        corrcoef = cp.corrcoef(col1, col2)\n",
+    "        corrcoef = np.corrcoef(col1, col2)\n",
     "\n",
     "        if abs(corrcoef[0][1]) > CORRCOEF_THRESHOLD:\n",
     "            included_features.remove(included_features[j])\n",
@@ -116,36 +134,164 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Using default config.\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpojm2ccpc\n",
-      "INFO:tensorflow:Using config: {'_model_dir': 'C:\\\\Users\\\\Everton\\\\AppData\\\\Local\\\\Temp\\\\tmpojm2ccpc', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': None, '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_train_distribute': None, '_device_fn': None, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x0000025E10935748>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n",
-      "Treinando\n",
-      "INFO:tensorflow:Calling model_fn.\n",
-      "INFO:tensorflow:Done calling model_fn.\n",
-      "INFO:tensorflow:Create CheckpointSaverHook.\n",
-      "INFO:tensorflow:Graph was finalized.\n",
-      "INFO:tensorflow:Running local_init_op.\n",
-      "INFO:tensorflow:Done running local_init_op.\n",
-      "INFO:tensorflow:Saving checkpoints for 0 into C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpojm2ccpc\\model.ckpt.\n",
-      "INFO:tensorflow:loss = 1011.17926, step = 1\n",
-      "INFO:tensorflow:Saving checkpoints for 100 into C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpojm2ccpc\\model.ckpt.\n",
-      "INFO:tensorflow:Loss for final step: 4.887569e-06.\n",
-      "Testando\n",
-      "INFO:tensorflow:Calling model_fn.\n",
-      "INFO:tensorflow:Done calling model_fn.\n",
-      "INFO:tensorflow:Starting evaluation at 2018-11-06-00:06:17\n",
-      "INFO:tensorflow:Graph was finalized.\n",
-      "INFO:tensorflow:Restoring parameters from C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpojm2ccpc\\model.ckpt-100\n",
-      "INFO:tensorflow:Running local_init_op.\n",
-      "INFO:tensorflow:Done running local_init_op.\n",
-      "INFO:tensorflow:Finished evaluation at 2018-11-06-00:06:18\n",
-      "INFO:tensorflow:Saving dict for global step 100: accuracy = 0.5573054, average_loss = 58.870815, global_step = 100, loss = 7534.5493\n",
-      "INFO:tensorflow:Saving 'checkpoint_path' summary for global step 100: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpojm2ccpc\\model.ckpt-100\n",
-      "Acc: 0.5573053956031799\n"
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp3zzc705y\n",
+      "\n",
+      "Nodes: [70]\n",
+      "Activation fn: <function relu at 0x000001FCEC1D9E18>\n",
+      "Accuracy: 0.5774462819099426\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpyxkbmr7z\n",
+      "\n",
+      "Nodes: [62]\n",
+      "Activation fn: <function leaky_relu at 0x000001FCEC8F1378>\n",
+      "Accuracy: 0.5602404475212097\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpyllva3p3\n",
+      "\n",
+      "Nodes: [172]\n",
+      "Activation fn: <function sigmoid at 0x000001FCEC2D4510>\n",
+      "Accuracy: 0.8189951777458191\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp5eyj1_3c\n",
+      "\n",
+      "Nodes: [54]\n",
+      "Activation fn: <function tanh at 0x000001FCEC2D4620>\n",
+      "Accuracy: 0.991640031337738\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpp_r1x8cb\n",
+      "\n",
+      "Nodes: [27 48]\n",
+      "Activation fn: <function relu at 0x000001FCEC1D9E18>\n",
+      "Accuracy: 0.988664448261261\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpju9gc88_\n",
+      "\n",
+      "Nodes: [90 61]\n",
+      "Activation fn: <function leaky_relu at 0x000001FCEC8F1378>\n",
+      "Accuracy: 0.5780940055847168\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp27dloges\n",
+      "\n",
+      "Nodes: [133 115]\n",
+      "Activation fn: <function sigmoid at 0x000001FCEC2D4510>\n",
+      "Accuracy: 0.6700943112373352\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp0k0md2kb\n",
+      "\n",
+      "Nodes: [135  73]\n",
+      "Activation fn: <function tanh at 0x000001FCEC2D4620>\n",
+      "Accuracy: 0.8441560864448547\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpzgswd2fb\n",
+      "\n",
+      "Nodes: [128  47 109  60 154]\n",
+      "Activation fn: <function relu at 0x000001FCEC1D9E18>\n",
+      "Accuracy: 0.9761952757835388\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp2w7m31d2\n",
+      "\n",
+      "Nodes: [ 34  42  30 147 132]\n",
+      "Activation fn: <function leaky_relu at 0x000001FCEC8F1378>\n",
+      "Accuracy: 0.9886037111282349\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpo1_wkuai\n",
+      "\n",
+      "Nodes: [ 27 161 133  58 147]\n",
+      "Activation fn: <function sigmoid at 0x000001FCEC2D4510>\n",
+      "Accuracy: 0.9857900738716125\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp8zd6usof\n",
+      "\n",
+      "Nodes: [143  68 159 156  48]\n",
+      "Activation fn: <function tanh at 0x000001FCEC2D4620>\n",
+      "Accuracy: 0.9857293367385864\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmprq_ld4js\n",
+      "\n",
+      "Nodes: [ 11 114 194 141  35 179 148  17  55 139]\n",
+      "Activation fn: <function relu at 0x000001FCEC1D9E18>\n",
+      "Accuracy: 0.9879559278488159\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpmqfborp2\n",
+      "\n",
+      "Nodes: [169  37  93 119  90  77 132  11 120  21]\n",
+      "Activation fn: <function leaky_relu at 0x000001FCEC8F1378>\n",
+      "Accuracy: 0.9841302037239075\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpjhm9x81m\n",
+      "\n",
+      "Nodes: [177  50  47 140 176 192 185 114 144 107]\n",
+      "Activation fn: <function sigmoid at 0x000001FCEC2D4510>\n",
+      "Accuracy: 0.17851504683494568\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpux8q9u9u\n",
+      "\n",
+      "Nodes: [194 155 109  92  55 156 130  91 138 143]\n",
+      "Activation fn: <function tanh at 0x000001FCEC2D4620>\n",
+      "Accuracy: 0.17851504683494568\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp5dttn7ka\n",
+      "\n",
+      "Nodes: [192  69 194 112  61  71  30  94 156 167  14  66  71  11 134  80  83  88\n",
+      " 129 125]\n",
+      "Activation fn: <function relu at 0x000001FCEC1D9E18>\n",
+      "Accuracy: 0.17851504683494568\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpt7pcrwnx\n",
+      "\n",
+      "Nodes: [ 60  32  75 110  13 180  56 199 171  42  39 112  49  49 114  57 161 174\n",
+      " 149 122]\n",
+      "Activation fn: <function leaky_relu at 0x000001FCEC8F1378>\n",
+      "Accuracy: 0.9370673298835754\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp3ro0zn3k\n",
+      "\n",
+      "Nodes: [ 48 102  85 152  80  82  85 159  17 141 158 162 176  86 126 132  46 183\n",
+      " 179 139]\n",
+      "Activation fn: <function sigmoid at 0x000001FCEC2D4510>\n",
+      "Accuracy: 0.17851504683494568\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpns0_d11o\n",
+      "\n",
+      "Nodes: [155  78  50 177  40  55  81  76  61  72 197 182 129 139 121  59  85 114\n",
+      " 164 163]\n",
+      "Activation fn: <function tanh at 0x000001FCEC2D4620>\n",
+      "Accuracy: 0.17851504683494568\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp3ae8wuxl\n",
+      "\n",
+      "Nodes: [ 64 100 139 164 182 147 116 100  25  20  42  11 119 187 198  88  22  91\n",
+      " 103 172  46 198  77  69  41  29 151  36 116  77]\n",
+      "Activation fn: <function relu at 0x000001FCEC1D9E18>\n",
+      "Accuracy: 0.17851504683494568\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpe9nkot9h\n",
+      "\n",
+      "Nodes: [ 24 106 193  37  66  69  28  62  65 137  52  90  35 144 141  97 152 124\n",
+      " 185  85  89 189  68  17 188  27 161  35  15 159]\n",
+      "Activation fn: <function leaky_relu at 0x000001FCEC8F1378>\n",
+      "Accuracy: 0.17851504683494568\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp4muc0ier\n",
+      "\n",
+      "Nodes: [ 39 155 126 134  15  46 125 157 119  89  39 192 146 151  41 186  76 155\n",
+      " 174  28 165  39 148 118 190 176 131  73 110 159]\n",
+      "Activation fn: <function sigmoid at 0x000001FCEC2D4510>\n",
+      "Accuracy: 0.17851504683494568\n",
+      "\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpm5n1ek8t\n",
+      "\n",
+      "Nodes: [139  64 114  14  49  47 139 183  66  52 170  93 133 196 135 172  40  23\n",
+      "  49  90 137 156  96  18 105 122  47 182  92  94]\n",
+      "Activation fn: <function tanh at 0x000001FCEC2D4620>\n",
+      "Accuracy: 0.17851504683494568\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "tf.logging.set_verbosity(tf.logging.WARN)\n",
+    "\n",
     "n_train = math.ceil(len(x.index)*0.9)\n",
     "n_test = len(x.index) - n_train\n",
     "\n",
@@ -158,31 +304,21 @@
     "#x_train = tf.keras.utils.normalize(x_train, axis=1)\n",
     "\n",
     "NUM_STEPS = 10000\n",
-    "BATCH_SIZE = 128\n",
+    "BATCH_SIZE = 1000\n",
     "\n",
     "feature_columns = []\n",
     "for feature in x_train.keys():\n",
     "    feature_columns.append(tf.feature_column.numeric_column(key=feature))\n",
     "\n",
-    "hidden_units=[1000]    \n",
-    "    \n",
-    "shallow = tf.estimator.DNNClassifier(\n",
-    "    feature_columns=feature_columns,\n",
-    "    hidden_units=hidden_units, #1 hidden layer com 1000 hidden units\n",
-    "    n_classes=23) #Pode distinguir até 23 valores diferentes\n",
+    "# Testes ReLu\n",
     "\n",
-    "# Treino\n",
-    "print(\"Treinando\")\n",
-    "shallow.train(\n",
-    "    input_fn=lambda:input_fn(x_train, y_train, BATCH_SIZE),\n",
-    "    steps=NUM_STEPS)\n",
+    "sizes = [1, 2, 5, 10, 20, 30]\n",
+    "activation_fns = [tf.nn.relu, tf.nn.leaky_relu, tf.nn.sigmoid, tf.nn.tanh]\n",
     "\n",
-    "# Teste\n",
-    "print(\"Testando\")\n",
-    "eval_result = shallow.evaluate(\n",
-    "    input_fn=lambda:input_fn_test(x_test, y_test, BATCH_SIZE))\n",
-    "\n",
-    "print(f'Acc: {eval_result[\"accuracy\"]}')"
+    "for size in sizes:\n",
+    "    for activation_fn in activation_fns:\n",
+    "        hidden_units = np.random.randint(low=10, high=200, size=size)\n",
+    "        classifier_fn(feature_columns, hidden_units, activation_fn, BATCH_SIZE, NUM_STEPS)"
    ]
   }
  ],
