--- a/source/notebook/kdd.ipynb
+++ b/source/notebook/kdd.ipynb
@@ -29,6 +29,7 @@
     "    dataset = dataset.batch(batch_size)\n",
     "    return dataset\n",
     "\n",
+    "# separar essa funcao - classifier_shallow e um classifier_deep\n",
     "def classifier_fn(feature_columns, hidden_units, activation_fn, BATCH_SIZE, NUM_STEPS):\n",
     "    classifier = tf.estimator.DNNClassifier(\n",
     "        feature_columns=feature_columns,\n",
@@ -102,6 +103,7 @@
     "included_features = column_names\n",
     "included_features.remove(\"attack\")\n",
     "\n",
+    "#se houver tempo, teste com coef de 0.1 ou 0.2\n",
     "CORRCOEF_THRESHOLD = 0.5\n",
     "\n",
     "i = 0\n",
@@ -304,6 +306,7 @@
     "#x_train = tf.keras.utils.normalize(x_train, axis=1)\n",
     "\n",
     "NUM_STEPS = 10000\n",
+    "#tente um batch multiplo de 64 (1024)\n",
     "BATCH_SIZE = 1000\n",
     "\n",
     "feature_columns = []\n",
@@ -312,7 +315,11 @@
     "\n",
     "# Testes ReLu\n",
     "\n",
+    "#fazer individual\n",
     "sizes = [1, 2, 5, 10, 20, 30]\n",
+    "#nao deixe as activation functions nesse loop. Esta errado.\n",
+    "#nao use a sigmoid. Use a softmax [generalizacao da sigmoid]\n",
+    "\n",
     "activation_fns = [tf.nn.relu, tf.nn.leaky_relu, tf.nn.sigmoid, tf.nn.tanh]\n",
     "\n",
     "for size in sizes:\n",
@@ -338,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
