Arrumando os pedidos

--- a/source/notebook/kdd.ipynb
+++ b/source/notebook/kdd.ipynb
@@ -19,6 +19,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "CORRCOEF_THRESHOLD = 0.5\n",
+    "NUM_STEPS = 10000\n",
+    "BATCH_SIZE = 1024\n",
+    "\n",
+    "# Número de hidden layers: 1, 2, 5, 10, 20, 30\n",
+    "hidden_units = [20, 40, 60, 80, 100] #Número de hidden units por hidden layer, cada posição do vetor é um layer diferente\n",
+    "# Funções de ativação: tf.nn.relu, tf.nn.leaky_relu, tf.nn.sigmoid, tf.nn.tanh\n",
+    "activation_fn = tf.nn.relu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def input_fn(x, y, batch_size):\n",
     "    dataset = tf.data.Dataset.from_tensor_slices((dict(x), y))\n",
     "    dataset = dataset.shuffle(1000).repeat().batch(batch_size)\n",
@@ -30,6 +46,9 @@
     "    return dataset\n",
     "\n",
     "def classifier_fn(feature_columns, hidden_units, activation_fn, BATCH_SIZE, NUM_STEPS):\n",
+    "    #Abre arquivo e adiciona no fim\n",
+    "    file = open(\"output.txt\", \"a\")\n",
+    "    \n",
     "    classifier = tf.estimator.DNNClassifier(\n",
     "        feature_columns=feature_columns,\n",
     "        hidden_units=hidden_units, #1 hidden layer com 1000 hidden units\n",
@@ -46,12 +65,12 @@
     "    eval_result = classifier.evaluate(\n",
     "        input_fn=lambda:input_fn_test(x_test, y_test, BATCH_SIZE))\n",
     "\n",
-    "    print(f'\\nNodes: {hidden_units}\\nActivation fn: {activation_fn}\\nAccuracy: {eval_result[\"accuracy\"]}\\n')"
+    "    file.write(f'###\\nHidden layers: {len(hidden_units)}\\nHidden units: {hidden_units}\\nActivation fn: {activation_fn}\\nAccuracy: {eval_result[\"accuracy\"]}\\n###\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +121,6 @@
     "included_features = column_names\n",
     "included_features.remove(\"attack\")\n",
     "\n",
-    "CORRCOEF_THRESHOLD = 0.5\n",
     "\n",
     "i = 0\n",
     "j = 1\n",
@@ -127,165 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp3zzc705y\n",
-      "\n",
-      "Nodes: [70]\n",
-      "Activation fn: <function relu at 0x000001FCEC1D9E18>\n",
-      "Accuracy: 0.5774462819099426\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpyxkbmr7z\n",
-      "\n",
-      "Nodes: [62]\n",
-      "Activation fn: <function leaky_relu at 0x000001FCEC8F1378>\n",
-      "Accuracy: 0.5602404475212097\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpyllva3p3\n",
-      "\n",
-      "Nodes: [172]\n",
-      "Activation fn: <function sigmoid at 0x000001FCEC2D4510>\n",
-      "Accuracy: 0.8189951777458191\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp5eyj1_3c\n",
-      "\n",
-      "Nodes: [54]\n",
-      "Activation fn: <function tanh at 0x000001FCEC2D4620>\n",
-      "Accuracy: 0.991640031337738\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpp_r1x8cb\n",
-      "\n",
-      "Nodes: [27 48]\n",
-      "Activation fn: <function relu at 0x000001FCEC1D9E18>\n",
-      "Accuracy: 0.988664448261261\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpju9gc88_\n",
-      "\n",
-      "Nodes: [90 61]\n",
-      "Activation fn: <function leaky_relu at 0x000001FCEC8F1378>\n",
-      "Accuracy: 0.5780940055847168\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp27dloges\n",
-      "\n",
-      "Nodes: [133 115]\n",
-      "Activation fn: <function sigmoid at 0x000001FCEC2D4510>\n",
-      "Accuracy: 0.6700943112373352\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp0k0md2kb\n",
-      "\n",
-      "Nodes: [135  73]\n",
-      "Activation fn: <function tanh at 0x000001FCEC2D4620>\n",
-      "Accuracy: 0.8441560864448547\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpzgswd2fb\n",
-      "\n",
-      "Nodes: [128  47 109  60 154]\n",
-      "Activation fn: <function relu at 0x000001FCEC1D9E18>\n",
-      "Accuracy: 0.9761952757835388\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp2w7m31d2\n",
-      "\n",
-      "Nodes: [ 34  42  30 147 132]\n",
-      "Activation fn: <function leaky_relu at 0x000001FCEC8F1378>\n",
-      "Accuracy: 0.9886037111282349\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpo1_wkuai\n",
-      "\n",
-      "Nodes: [ 27 161 133  58 147]\n",
-      "Activation fn: <function sigmoid at 0x000001FCEC2D4510>\n",
-      "Accuracy: 0.9857900738716125\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp8zd6usof\n",
-      "\n",
-      "Nodes: [143  68 159 156  48]\n",
-      "Activation fn: <function tanh at 0x000001FCEC2D4620>\n",
-      "Accuracy: 0.9857293367385864\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmprq_ld4js\n",
-      "\n",
-      "Nodes: [ 11 114 194 141  35 179 148  17  55 139]\n",
-      "Activation fn: <function relu at 0x000001FCEC1D9E18>\n",
-      "Accuracy: 0.9879559278488159\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpmqfborp2\n",
-      "\n",
-      "Nodes: [169  37  93 119  90  77 132  11 120  21]\n",
-      "Activation fn: <function leaky_relu at 0x000001FCEC8F1378>\n",
-      "Accuracy: 0.9841302037239075\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpjhm9x81m\n",
-      "\n",
-      "Nodes: [177  50  47 140 176 192 185 114 144 107]\n",
-      "Activation fn: <function sigmoid at 0x000001FCEC2D4510>\n",
-      "Accuracy: 0.17851504683494568\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpux8q9u9u\n",
-      "\n",
-      "Nodes: [194 155 109  92  55 156 130  91 138 143]\n",
-      "Activation fn: <function tanh at 0x000001FCEC2D4620>\n",
-      "Accuracy: 0.17851504683494568\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp5dttn7ka\n",
-      "\n",
-      "Nodes: [192  69 194 112  61  71  30  94 156 167  14  66  71  11 134  80  83  88\n",
-      " 129 125]\n",
-      "Activation fn: <function relu at 0x000001FCEC1D9E18>\n",
-      "Accuracy: 0.17851504683494568\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpt7pcrwnx\n",
-      "\n",
-      "Nodes: [ 60  32  75 110  13 180  56 199 171  42  39 112  49  49 114  57 161 174\n",
-      " 149 122]\n",
-      "Activation fn: <function leaky_relu at 0x000001FCEC8F1378>\n",
-      "Accuracy: 0.9370673298835754\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp3ro0zn3k\n",
-      "\n",
-      "Nodes: [ 48 102  85 152  80  82  85 159  17 141 158 162 176  86 126 132  46 183\n",
-      " 179 139]\n",
-      "Activation fn: <function sigmoid at 0x000001FCEC2D4510>\n",
-      "Accuracy: 0.17851504683494568\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpns0_d11o\n",
-      "\n",
-      "Nodes: [155  78  50 177  40  55  81  76  61  72 197 182 129 139 121  59  85 114\n",
-      " 164 163]\n",
-      "Activation fn: <function tanh at 0x000001FCEC2D4620>\n",
-      "Accuracy: 0.17851504683494568\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp3ae8wuxl\n",
-      "\n",
-      "Nodes: [ 64 100 139 164 182 147 116 100  25  20  42  11 119 187 198  88  22  91\n",
-      " 103 172  46 198  77  69  41  29 151  36 116  77]\n",
-      "Activation fn: <function relu at 0x000001FCEC1D9E18>\n",
-      "Accuracy: 0.17851504683494568\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpe9nkot9h\n",
-      "\n",
-      "Nodes: [ 24 106 193  37  66  69  28  62  65 137  52  90  35 144 141  97 152 124\n",
-      " 185  85  89 189  68  17 188  27 161  35  15 159]\n",
-      "Activation fn: <function leaky_relu at 0x000001FCEC8F1378>\n",
-      "Accuracy: 0.17851504683494568\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp4muc0ier\n",
-      "\n",
-      "Nodes: [ 39 155 126 134  15  46 125 157 119  89  39 192 146 151  41 186  76 155\n",
-      " 174  28 165  39 148 118 190 176 131  73 110 159]\n",
-      "Activation fn: <function sigmoid at 0x000001FCEC2D4510>\n",
-      "Accuracy: 0.17851504683494568\n",
-      "\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmpm5n1ek8t\n",
-      "\n",
-      "Nodes: [139  64 114  14  49  47 139 183  66  52 170  93 133 196 135 172  40  23\n",
-      "  49  90 137 156  96  18 105 122  47 182  92  94]\n",
-      "Activation fn: <function tanh at 0x000001FCEC2D4620>\n",
-      "Accuracy: 0.17851504683494568\n",
-      "\n"
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp0py52r56\n"
      ]
     }
    ],
@@ -301,24 +168,11 @@
     "x_test = x[n_train:n_train+n_test]\n",
     "y_test = y[n_train:n_train+n_test]\n",
     "\n",
-    "#x_train = tf.keras.utils.normalize(x_train, axis=1)\n",
-    "\n",
-    "NUM_STEPS = 10000\n",
-    "BATCH_SIZE = 1000\n",
-    "\n",
     "feature_columns = []\n",
     "for feature in x_train.keys():\n",
     "    feature_columns.append(tf.feature_column.numeric_column(key=feature))\n",
     "\n",
-    "# Testes ReLu\n",
-    "\n",
-    "sizes = [1, 2, 5, 10, 20, 30]\n",
-    "activation_fns = [tf.nn.relu, tf.nn.leaky_relu, tf.nn.sigmoid, tf.nn.tanh]\n",
-    "\n",
-    "for size in sizes:\n",
-    "    for activation_fn in activation_fns:\n",
-    "        hidden_units = np.random.randint(low=10, high=200, size=size)\n",
-    "        classifier_fn(feature_columns, hidden_units, activation_fn, BATCH_SIZE, NUM_STEPS)"
+    "classifier_fn(feature_columns, hidden_units, activation_fn, BATCH_SIZE, NUM_STEPS)"
    ]
   }
  ],
