--- a/source/notebook/kdd_leaky_relu.ipynb
+++ b/source/notebook/kdd_leaky_relu.ipynb
@@ -4,13 +4,38 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "if (!(\"Notification\" in window)) {\n",
+       "    alert(\"This browser does not support desktop notifications, so the %%notify magic will not work.\");\n",
+       "} else if (Notification.permission !== 'granted' && Notification.permission !== 'denied') {\n",
+       "    Notification.requestPermission(function (permission) {\n",
+       "        if(!('permission' in Notification)) {\n",
+       "            Notification.permission = permission;\n",
+       "        }\n",
+       "    })\n",
+       "}\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import math\n",
     "import tensorflow as tf\n",
-    "from tensorflow.contrib import learn"
+    "from tensorflow.contrib import learn\n",
+    "import json\n",
+    "import jupyternotify\n",
+    "ip = get_ipython()\n",
+    "ip.register_magics(jupyternotify.JupyterNotifyMagics)"
    ]
   },
   {
@@ -19,14 +44,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "with open('./hidden_units.json') as file:\n",
+    "    hidden_units = json.load(file)\n",
+    "\n",
     "CORRCOEF_THRESHOLD = 0.5\n",
     "NUM_STEPS = 10000\n",
     "BATCH_SIZE = 1024\n",
     "\n",
     "# Número de hidden layers: 1, 2, 5, 10, 20, 30\n",
-    "hidden_units = [20, 40, 60, 80, 100] #Número de hidden units por hidden layer, cada posição do vetor é um layer diferente\n",
-    "# Funções de ativação: tf.nn.relu, tf.nn.leaky_relu, tf.nn.sigmoid, tf.nn.tanh\n",
-    "activation_fn = tf.nn.relu"
+    "hidden_units = hidden_units[31] #Número de hidden units por hidden layer, cada posição do vetor é um layer diferente\n",
+    "activation_fn = tf.nn.leaky_relu"
    ]
   },
   {
@@ -45,10 +72,7 @@
     "    dataset = dataset.batch(batch_size)\n",
     "    return dataset\n",
     "\n",
-    "def classifier_fn(feature_columns, hidden_units, activation_fn, BATCH_SIZE, NUM_STEPS):\n",
-    "    #Abre arquivo e adiciona no fim\n",
-    "    file = open(\"output.txt\", \"a\")\n",
-    "    \n",
+    "def classifier_fn(feature_columns, hidden_units, activation_fn, BATCH_SIZE, NUM_STEPS):  \n",
     "    classifier = tf.estimator.DNNClassifier(\n",
     "        feature_columns=feature_columns,\n",
     "        hidden_units=hidden_units, #1 hidden layer com 1000 hidden units\n",
@@ -65,7 +89,10 @@
     "    eval_result = classifier.evaluate(\n",
     "        input_fn=lambda:input_fn_test(x_test, y_test, BATCH_SIZE))\n",
     "\n",
-    "    file.write(f'###\\nHidden layers: {len(hidden_units)}\\nHidden units: {hidden_units}\\nActivation fn: {activation_fn}\\nAccuracy: {eval_result[\"accuracy\"]}\\n###\\n')"
+    "    #Abre arquivo e adiciona no fim\n",
+    "    file = open(\"./output.csv\", \"a\")\n",
+    "    file.write(f'\"{len(hidden_units)}\",\"{hidden_units}\",\"{eval_result[\"accuracy\"]}\",\"{eval_result[\"average_loss\"]}\",\"{eval_result[\"loss\"]}\",\"leaky_relu\"\\n')\n",
+    "    file.close()"
    ]
   },
   {
@@ -152,8 +179,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp0py52r56\n"
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp_4ggvp3n\n"
      ]
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "$(document).ready(\n",
+       "    function() {\n",
+       "        function appendUniqueDiv(){\n",
+       "            // append a div with our uuid so we can check that it's already\n",
+       "            // been sent and avoid duplicates on page reload\n",
+       "            var notifiedDiv = document.createElement(\"div\")\n",
+       "            notifiedDiv.id = \"598b5338-8249-4a01-9610-6d534f706e67\"\n",
+       "            element.append(notifiedDiv)\n",
+       "        }\n",
+       "\n",
+       "        // only send notifications if the pageload is complete; this will\n",
+       "        // help stop extra notifications when a saved notebook is loaded,\n",
+       "        // which during testing gives us state \"interactive\", not \"complete\"\n",
+       "        if (document.readyState === 'complete') {\n",
+       "            // check for the div that signifies that the notification\n",
+       "            // was already sent\n",
+       "            if (document.getElementById(\"598b5338-8249-4a01-9610-6d534f706e67\") === null) {\n",
+       "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Done!\"};\n",
+       "                if (Notification.permission !== 'denied') {\n",
+       "                    if (Notification.permission !== 'granted') { \n",
+       "                        Notification.requestPermission(function (permission) {\n",
+       "                            if(!('permission' in Notification)) {\n",
+       "                                Notification.permission = permission\n",
+       "                            }\n",
+       "                        })\n",
+       "                    }\n",
+       "                    if (Notification.permission === 'granted') {\n",
+       "                    var notification = new Notification(\"Jupyter Notebook\", notificationPayload)\n",
+       "                    appendUniqueDiv()\n",
+       "                    notification.onclick = function () {\n",
+       "                        window.focus();\n",
+       "                        this.close();\n",
+       "                        };\n",
+       "                    } \n",
+       "                }     \n",
+       "            }\n",
+       "        }\n",
+       "    }\n",
+       ")\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -172,7 +249,9 @@
     "for feature in x_train.keys():\n",
     "    feature_columns.append(tf.feature_column.numeric_column(key=feature))\n",
     "\n",
-    "classifier_fn(feature_columns, hidden_units, activation_fn, BATCH_SIZE, NUM_STEPS)"
+    "classifier_fn(feature_columns, hidden_units, activation_fn, BATCH_SIZE, NUM_STEPS)\n",
+    "\n",
+    "%notify -m \"Done!\""
    ]
   }
  ],
