--- a/source/notebook/kdd_relu.ipynb
+++ b/source/notebook/kdd_relu.ipynb
@@ -52,7 +52,7 @@
     "BATCH_SIZE = 1024\n",
     "\n",
     "# Número de hidden layers: 1, 2, 5, 10, 20, 30\n",
-    "hidden_units = hidden_units[23] #Número de hidden units por hidden layer, cada posição do vetor é um layer diferente\n",
+    "hidden_units = hidden_units[31] #Número de hidden units por hidden layer, cada posição do vetor é um layer diferente\n",
     "activation_fn = tf.nn.relu"
    ]
   },
@@ -172,15 +172,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp2xymlwrd\n"
+      "WARNING:tensorflow:Using temporary folder as model directory: C:\\Users\\Everton\\AppData\\Local\\Temp\\tmp2fmz1cew\n"
      ]
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "$(document).ready(\n",
+       "    function() {\n",
+       "        function appendUniqueDiv(){\n",
+       "            // append a div with our uuid so we can check that it's already\n",
+       "            // been sent and avoid duplicates on page reload\n",
+       "            var notifiedDiv = document.createElement(\"div\")\n",
+       "            notifiedDiv.id = \"0c2ede59-b3a0-40b4-b8eb-6635383ef359\"\n",
+       "            element.append(notifiedDiv)\n",
+       "        }\n",
+       "\n",
+       "        // only send notifications if the pageload is complete; this will\n",
+       "        // help stop extra notifications when a saved notebook is loaded,\n",
+       "        // which during testing gives us state \"interactive\", not \"complete\"\n",
+       "        if (document.readyState === 'complete') {\n",
+       "            // check for the div that signifies that the notification\n",
+       "            // was already sent\n",
+       "            if (document.getElementById(\"0c2ede59-b3a0-40b4-b8eb-6635383ef359\") === null) {\n",
+       "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Done!\"};\n",
+       "                if (Notification.permission !== 'denied') {\n",
+       "                    if (Notification.permission !== 'granted') { \n",
+       "                        Notification.requestPermission(function (permission) {\n",
+       "                            if(!('permission' in Notification)) {\n",
+       "                                Notification.permission = permission\n",
+       "                            }\n",
+       "                        })\n",
+       "                    }\n",
+       "                    if (Notification.permission === 'granted') {\n",
+       "                    var notification = new Notification(\"Jupyter Notebook\", notificationPayload)\n",
+       "                    appendUniqueDiv()\n",
+       "                    notification.onclick = function () {\n",
+       "                        window.focus();\n",
+       "                        this.close();\n",
+       "                        };\n",
+       "                    } \n",
+       "                }     \n",
+       "            }\n",
+       "        }\n",
+       "    }\n",
+       ")\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
