Correções pré reunião

--- a/source/notebook/kdd_keras.ipynb
+++ b/source/notebook/kdd_keras.ipynb
@@ -274,14 +274,18 @@
     "# )\n",
     "dataset = dataset.replace({\"attack\": attack_dict})\n",
     "\n",
+    "# Pego as colunas numéricas\n",
     "numeric_cols = dataset._get_numeric_data().columns\n",
     "print(numeric_cols)\n",
     "\n",
+    "# Pego as colunas categoricas\n",
     "categorical_cols = list(set(dataset.columns)-set(numeric_cols))\n",
     "print(categorical_cols)\n",
     "\n",
+    "#Normalizo só as numéricas\n",
     "names_to_normalize = list(dataset.drop(categorical_cols, axis=1).columns)\n",
     "print(names_to_normalize)\n",
+    "\n",
     "\n",
     "min_max_scaler = preprocessing.MinMaxScaler()\n",
     "data_scaled = dataset.copy(deep=True)\n",
@@ -290,6 +294,7 @@
     "\n",
     "print(data_scaled.head())\n",
     "\n",
+    "# https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.get_dummies.html\n",
     "def apply_dummies(df, feature):\n",
     "    get_dummies = pd.get_dummies(df[feature])\n",
     "    for x in get_dummies.columns:\n",
@@ -298,6 +303,7 @@
     "    df.drop(feature, axis=1, inplace=True)\n",
     "    return None\n",
     "\n",
+    "# TODO: Colocar target_type\n",
     "for feature in categorical_cols:\n",
     "    if feature not in ['attack', 'target_type']:\n",
     "        apply_dummies(data_scaled, feature)\n",
@@ -526,13 +532,7 @@
       "355694/355694 [==============================] - 2s 6us/step - loss: 0.0057 - accuracy: 1.0000 - val_loss: 0.0056 - val_accuracy: 1.0000\n",
       "Epoch 54/100\n",
       "355694/355694 [==============================] - 2s 6us/step - loss: 0.0056 - accuracy: 1.0000 - val_loss: 0.0055 - val_accuracy: 1.0000\n",
-      "Epoch 55/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 55/100\n",
       "355694/355694 [==============================] - 2s 6us/step - loss: 0.0055 - accuracy: 1.0000 - val_loss: 0.0054 - val_accuracy: 1.0000\n",
       "Epoch 56/100\n",
       "355694/355694 [==============================] - 2s 6us/step - loss: 0.0054 - accuracy: 1.0000 - val_loss: 0.0053 - val_accuracy: 1.0000\n",
